<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/tbMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/music_off"
            android:textOn="@string/music_on" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languages"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/cbCroatian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/croatian" />

        <CheckBox
            android:id="@+id/cbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <CheckBox
            android:id="@+id/cbItalian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italian" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Languages"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/rgLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbCroatian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/croatian" />

            <RadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/rbItalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/italian" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colors"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--android:entries="@array/colors"-->

        <!--<TextView-->
            <!--android:id="@+id/textView2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Visited city"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

        <!--<ListView-->
            <!--android:id="@+id/listView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:entries="@array/cities" />-->
    </LinearLayout>
</ScrollView>
